force-app/main/default/objects/Form_Assignment__c/Form_Assignment__c.object-meta.xml
<CustomObject>
    <label>Form Assignment</label>
    <nameField>
        <label>שם FormAssignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Assignment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>