force-app/main/default/objects/Form_Assignment__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>NPERFORM__PDF_Layout__c</referenceTo>
    <relationshipLabel>Form Assignment</relationshipLabel>
    <relationshipName>Form_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>