force-app/main/default/objects/Form_Assignment__c/fields/Rows_From__c.field-meta.xml
<CustomField>
    <fullName>Rows_From__c</fullName>
    <label>Rows From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>