force-app/main/default/objects/Form_Assignment__c/fields/Share_Specific__c.field-meta.xml
<CustomField>
    <fullName>Share_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Specific</label>
    <type>Checkbox</type>
</CustomField>