force-app/main/default/objects/Form_Assignment__c/listViews/AllReceipt.listView-meta.xml
<ListView>
    <fullName>AllReceipt</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Rows_From__c</columns>
    <columns>Rows_To__c</columns>
    <columns>Share_Specific__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Receipt</value>
    </filters>
    <label>Receipt</label>
    <language>en_US</language>
</ListView>